Started work on parsing

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -11,7 +11,7 @@ ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c \
 ft_putnbr_fd.c ft_contains.c ft_printf/ft_printf.c ft_printf/hex.c \
 ft_printf/hex_util.c ft_printf/printing.c get_next_line/get_next_line.c \
 get_next_line/get_next_line_utils.c ft_iswhite_space.c ft_strrepl.c \
-ft_streq.c
+ft_streq.c ft_atod.c
 EXTRA_FILES=ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c \
 ft_lstiter.c ft_lstlast.c ft_lstmap.c ft_lstnew.c ft_lstsize.c
 FILES_OBJ=$(FILES:%.c=%.o)
