--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,9 +1,13 @@
 NAME = libft.a
 
 FLAGS = -Wall -Werror -Wextra -c
-LIST = list
 OBJ_DIR = obj
 
+PRINT =	printing.c hex.c hex_util.c ft_printf.c
+GNL =	get_next_line.c get_next_line_utils.c
+LIST =	ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c \
+		ft_lstiter.c ft_lstlast.c ft_lstmap.c ft_lstnew.c \
+		ft_lstsize.c ft_lstadd_back.c
 SRC = 	ft_isalpha.c ft_isdigit.c ft_isalnum.c \
 		ft_isascii.c ft_isprint.c ft_strlen.c \
 		ft_memset.c ft_bzero.c ft_memcpy.c \
@@ -14,14 +18,13 @@ SRC = 	ft_isalpha.c ft_isdigit.c ft_isalnum.c \
 		ft_calloc.c ft_strdup.c ft_substr.c \
 		ft_strjoin.c ft_strtrim.c ft_split.c \
 		ft_itoa.c ft_strmapi.c ft_striteri.c \
-        ft_printf/hex.c ft_printf/hex_util.c \
 		ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c \
-        ft_putnbr_fd.c ft_contains.c ft_printf/ft_printf.c \
-        ft_printf/printing.c get_next_line/get_next_line.c \
-        get_next_line/get_next_line_utils.c ft_iswhite_space.c \
-        ft_strrepl.c ft_streq.c ft_atod.c $(LIST)/ft_lstadd_back.c \
-        $(LIST)/ft_lstadd_front.c $(LIST)/ft_lstclear.c $(LIST)/ft_lstdelone.c \
-        $(LIST)/ft_lstiter.c $(LIST)/ft_lstlast.c $(LIST)/ft_lstmap.c $(LIST)/ft_lstnew.c $(LIST)/ft_lstsize.c
+		ft_putnbr_fd.c ft_contains.c ft_iswhite_space.c \
+		ft_strrepl.c ft_streq.c ft_atod.c \
+		ft_ends_with.c \
+		$(addprefix list/, $(LIST)) \
+		$(addprefix get_next_line/, $(GNL)) \
+		$(addprefix ft_printf/, $(PRINT))
 
 INC = -I ../../includes
 
