--- a/libft/Makefile
+++ b/libft/Makefile
@@ -8,20 +8,12 @@ GNL =	get_next_line.c get_next_line_utils.c
 LIST =	ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c \
 		ft_lstiter.c ft_lstlast.c ft_lstmap.c ft_lstnew.c \
 		ft_lstsize.c ft_lstadd_back.c
-SRC = 	ft_isalpha.c ft_isdigit.c ft_isalnum.c \
-		ft_isascii.c ft_isprint.c ft_strlen.c \
-		ft_memset.c ft_bzero.c ft_memcpy.c \
-		ft_memmove.c ft_strlcpy.c ft_strlcat.c \
-		ft_toupper.c ft_tolower.c ft_strchr.c \
-		ft_strrchr.c ft_strncmp.c ft_memchr.c \
-		ft_memcmp.c ft_strnstr.c ft_atoi.c \
-		ft_calloc.c ft_strdup.c ft_substr.c \
-		ft_strjoin.c ft_strtrim.c ft_split.c \
-		ft_itoa.c ft_strmapi.c ft_striteri.c \
-		ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c \
-		ft_putnbr_fd.c ft_contains.c ft_iswhite_space.c \
-		ft_strrepl.c ft_streq.c ft_atod.c \
-		ft_ends_with.c len_array.c free_array.c \
+SRC = 	free_array.c ft_atod.c ft_atoi.c ft_bzero.c \
+		ft_calloc.c ft_ends_with.c ft_isalnum.c ft_isalpha.c \
+		ft_isdigit.c ft_iswhite_space.c ft_itoa.c ft_memcpy.c \
+		ft_memset.c ft_putchar_fd.c ft_putnbr_fd.c \
+		ft_putstr_fd.c ft_split.c ft_strchr.c ft_strdup.c \
+		ft_streq.c ft_strjoin.c ft_strlen.c ft_strncmp.c \
 		$(addprefix list/, $(LIST)) \
 		$(addprefix get_next_line/, $(GNL)) \
 		$(addprefix ft_printf/, $(PRINT))
